Fix d66 roll template title alignment

--- a/Vaesen-dodgepong/vaesen.css
+++ b/Vaesen-dodgepong/vaesen.css
@@ -460,7 +460,15 @@ input.sheet-checkbox {
   color: white;
 }
 
-.sheet-rolltemplate-vaesen-d66 .sheet-vaesen-d66-roll .sheet-vaesen-d66-roll-title,
+.sheet-rolltemplate-vaesen-d66 .sheet-vaesen-d66-roll .sheet-vaesen-d66-roll-title {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  text-align: left;
+  color: white;
+  font-size: 16px;
+  position: relative;
+  top: -40px;
+}
+
 .sheet-rolltemplate-vaesen-resources .sheet-vaesen-resources-roll .sheet-vaesen-resources-roll-title,
 .sheet-rolltemplate-vaesen-skill .sheet-vaesen-skill-roll .sheet-vaesen-skill-roll-title {
   font-family: Georgia, 'Times New Roman', Times, serif;
